test/samples/invalid/tc/fun_call_poly.maruir
fun copy<M1, M2>(src: u16[] *M1): u16[] *M2

fun main()
locals src: u16[] *#memory, dst: u16[] *#storage;
{
    entry:
    dst := call copy<#calldata, #storage>(src);
    return;
}
